# vulkanite

./: .cargo-rdme.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
generator/: Cargo.toml
generator/src/: generator.rs  helpers.rs  main.rs  structs.rs  xml.rs
generator/src/generator/: advanced_commands.rs  dispatcher.rs  enums.rs  extensions.rs  formats.rs  handles.rs  raw_commands.rs  structs.rs
src/: lib.rs  loaded.rs  raw.rs  vk.rs  window.rs
src/vk/: custom.rs
vk-headers/: cargo.toml
vk-headers/src/: lib.rs
vk-headers/src/vk/: custom.rs  raw.rs
vk-headers/src/vk/raw/: handles-def.rs
vulkanite/: Cargo.toml  cargo.toml
vulkanite/src/: lib.rs  loaded.rs  vk.rs  window.rs
vulkanite/src/vk/: custom.rs  dispatcher.rs  enums.rs  extensions.rs  formats.rs  raw.rs  structs.rs
vulkanite/src/vk/raw/: commands.rs  handles.rs
vulkanite/src/vk/raw/handles/: macros.rs
vulkanite/src/vk/rs/: commands.rs
