workspace = { members = [ "example","generator"] }
[package]
name = "vk-headers"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
libloading = { version = "0.8.3", optional = true }
smallvec = { version = "1.13.2", optional = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to remove
[profile.dev]
panic = "abort"

[features]
loaded = ["libloading"]
small-vec = ["smallvec"]
