workspace = { members = [ "example","generator"] }
[package]
name = "vk-headers"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5"
libloading = { version = "0.8", optional = true }
smallvec = { version = "1.13", optional = true, features = ["const_generics"] }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.4", optional = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to remove
[profile.dev]
panic = "abort"

[features]
loaded = ["libloading"]
