[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
proc-macro2 = "1.0.78"
syn = "2.0.58"
derive_builder = "0.20.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.197", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
quote = "1.0.36"
bitflags = "2.5.0"

# to remove
[profile.dev]
panic = "abort"

