[package]
name = "vulkanite"
version = "0.0.4"
edition = "2021"
authors = ["Macdu <Macdu@users.noreply.github.com>"]
description = "Vulkan bindings for Rust"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Macdu/vulkanite"
keywords = ["gamedev", "graphics", "vulkan", "bindings"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api"
]
rust-version = "1.77"

[dependencies]
bitflags = "2.5"
libloading = { version = "0.8", optional = true }
smallvec = { version = "1.13", optional = true, features = ["const_generics"] }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { version = "0.4", optional = true }

[features]
loaded = ["dep:libloading"]
smallvec = ["dep:smallvec"]
raw-window-handle = ["dep:raw-window-handle"]

[package.metadata.docs.rs]
all-features = true
